pushing up before deploying

--- a/client/src/components/TestPost/get/style.css
+++ b/client/src/components/TestPost/get/style.css
@@ -1,6 +1,6 @@
 .note {
-	border-radius: 25px;
 	border: grey solid 1px;
+	border-radius: 25px;
 	margin-top: 3rem;
-	padding: 3%;
+	padding: 20px;
 }
