--- a/client/src/components/TestPost/post/style.css
+++ b/client/src/components/TestPost/post/style.css
@@ -1,23 +1,21 @@
-.errorAlert {
+.error {
 	border: red solid 3px;
-	background-color: rgb(255, 85, 85);
-	color: white;
 	border-radius: 25px;
+	background-color: rgb(255, 80, 80);
+	color: white;
 	padding: 10px;
-	margin: 10px 50% 10px 50%;
-	text-align: center;
+	margin: 10px 40% 10px 40%;
 	width: 20%;
-	transition: 2s;
+	text-align: center;
 }
 
-.successAlert {
+.success {
 	border: green solid 3px;
-	background-color: rgb(82, 255, 82);
-	color: white;
 	border-radius: 25px;
+	background-color: rgb(64, 151, 64);
+	color: white;
 	padding: 10px;
-	margin: 10px 50% 10px 50%;
-	text-align: center;
+	margin: 10px 40% 10px 40%;
 	width: 20%;
-	transition: 2s;
+	text-align: center;
 }
